Hair particles; The display percentage parameter breaks after a render is done #47935

Closed
opened 2016-03-25 18:52:02 +01:00 by Adam Friesen · 8 comments

System Information
OS - Windows 10 64 bit; CPU - Third-gen i7; GPU - ATI HD 7xxx; RAM - 24 gigs

Blender Version
Broken: Blender hash 3b5dec4 (March 22 build from the buildbot).
Worked: Unknown

Short description of error
The display percentage parameter (in the particle panels) breaks after rendering (so if you set it to show only 1 percent of the amount of particles in your hair particle system, exiting out of the render window will show 100 percent of the particles instead (which means a major slowdown for really large systems)). Clicking the parameter field again and clicking out of it will lower the visible count back to 1 percent.

I will also note that this bug only affects hair particles (when you have the particle mode set to "emitter" the parameter works like it should at all times).

Exact steps for others to reproduce the error
Open the .blend file and notice that only a few hair particles are visible, then render the scene. When the scene is done rendering, exit back to the 3D view and notice that every particle is visible despite what the display percentage suggests.

.blend
HairParticlesBug.blend

This has annoyed me for a while at least, I hope it can be fixed.

**System Information** OS - Windows 10 64 bit; CPU - Third-gen i7; GPU - ATI HD 7xxx; RAM - 24 gigs **Blender Version** Broken: Blender hash 3b5dec4 (March 22 build from the buildbot). Worked: Unknown **Short description of error** The display percentage parameter (in the particle panels) breaks after rendering (so if you set it to show only 1 percent of the amount of particles in your hair particle system, exiting out of the render window will show 100 percent of the particles instead (which means a major slowdown for really large systems)). Clicking the parameter field again and clicking out of it will lower the visible count back to 1 percent. I will also note that this bug *only* affects hair particles (when you have the particle mode set to "emitter" the parameter works like it should at all times). **Exact steps for others to reproduce the error** Open the .blend file and notice that only a few hair particles are visible, then render the scene. When the scene is done rendering, exit back to the 3D view and notice that every particle is visible despite what the display percentage suggests. **.blend** [HairParticlesBug.blend](https://archive.blender.org/developer/F298283/HairParticlesBug.blend) This has annoyed me for a while at least, I hope it can be fixed.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

#47912 was marked as duplicate of this issue

#47912 was marked as duplicate of this issue
Member

Added subscriber: @fracture

Added subscriber: @fracture
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can confirm

Can confirm

This issue was referenced by 8fcf774167

This issue was referenced by 8fcf774167a2ea52e63771655f6dd5eefb4ff7ee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2016-03-26 17:45:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47935
No description provided.